# enterprise-rag

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/: bench.py
deploy/compose/: vectordb.yaml
deploy/helm/: README.md
deploy/helm/enterprise-rag/: Chart.yaml  values-cpu-dev.yaml  values-h100.yaml  values-l40s.yaml  values.yaml
deploy/observability/: README.md  otel-collector.yaml  prometheus.yaml  tempo.yaml
deploy/observability/grafana/: dashboards.yaml  (+1 more)
docs/: api-rag.md  conf.py  image_captioning.md  index.md  migration_guide.md  milvus-configuration.md  model-profiles.md  multiturn.md  observability.md  prompt-customization.md  query-to-answer-pipeline.md  rag-strategies.md  self-reflection.md  summarization.md  versions1.json  vllm-optimization.md
docs/api_reference/: openapi_schema_ingestor_server.json
evals/: README.md  gold_set.jsonl  runner.py
evals/results/: 20260425T172044-baseline.json  20260425T175904-direct.json  20260425T180104-hyde.json  20260425T180348-multi_query.json  20260425T180619-step_back.json
examples/nvidia_rag_mcp/: requirements.txt
frontend/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
notebooks/: evaluation_02_recall.ipynb  ingestion_api_usage.ipynb  launchable.ipynb  mcp_server_usage.ipynb  nat_mcp_integration.ipynb
scripts/: README.md  extract_python_licenses.py
src/enterprise_rag/: __init__.py  cli.py  config.py  observability.py
tests/: conftest.py
tests/integration/: README.md  main.py  requirements.txt  test_sequences.yaml  vectordb.yaml
tests/unit/: conftest.py  requirements-test.txt  test_config.py  test_ingestion_parser.py  test_prompt_builder.py  test_safety_pipeline.py
(+181 files in other folders)
