[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Advanced document processing and retrieval-augmented generation system with layout-aware ingestion, multi-layer safety, and pluggable LLM providers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pat027" }]
license = { text = "MIT" }
keywords = ["rag", "document-processing", "llm", "retrieval", "qdrant", "docling"]

dependencies = [
    # Document parsing — layout, tables, OCR, figures
    "docling>=2.10.0",
    # Vector database
    "qdrant-client>=1.12.0,<1.13",
    # Embeddings + reranker (BGE-M3, BGE-Reranker-v2-m3)
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.3.0",
    "rank_bm25>=0.2.2",
    # Orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    # LLM client (vLLM exposes an OpenAI-compatible API; OpenAI Moderation also uses this SDK)
    "openai>=1.55.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",  # File uploads
    # Config + utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]

[project.scripts]
enterprise-rag = "enterprise_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
